Trendspotting spinner alignment issue

--- a/frontend/src/app/trendspotting/trendspotting.component.scss
+++ b/frontend/src/app/trendspotting/trendspotting.component.scss
@@ -256,6 +256,7 @@
     //margin-left: 100px;
 
     input {
+        padding-left: 10px;
         height: 48px;
         width: 84px;
         border-radius: 7px;
